--- a/MobileWorld/Web.config
+++ b/MobileWorld/Web.config
@@ -16,6 +16,9 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <!-- Facebook App Infor -->
+    <add key="FbAppId" value="560329844895295" />
+    <add key="FbAppSecret" value="76da960b4add036f2e779d6e945be140" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
