--- a/MobileWorld/Web.config
+++ b/MobileWorld/Web.config
@@ -19,6 +19,13 @@
     <!-- Facebook App Infor -->
     <add key="FbAppId" value="560329844895295" />
     <add key="FbAppSecret" value="76da960b4add036f2e779d6e945be140" />
+    <!-- Email Config -->
+    <add key="FromEmailAddress" value="MobileWorld.oscar@gmail.com" />
+    <add key="FromEmailDisplayName" value="Mobile World" />
+    <add key="FromEmailPassword" value="Oadmin007" />
+    <add key="SMTPHost" value="smtp.gmail.com" />
+    <add key="SMTPPort" value="587" />
+    <add key="EnableSSL" value="true" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
