--- a/Model/Model.csproj
+++ b/Model/Model.csproj
@@ -69,6 +69,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Common\BcryptPass.cs" />
+    <Compile Include="Common\GeneratorPassword.cs" />
     <Compile Include="Dao\BasketDao.cs" />
     <Compile Include="Dao\BillDao.cs" />
     <Compile Include="Dao\BrandDao.cs" />
