--- a/MobileWorld/Web.config
+++ b/MobileWorld/Web.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="OnlineShop" connectionString="data source=DESKTOP-7L1E34G\SQLEXPRESS;initial catalog=MobileWorldPlus;persist security info=True;user id=sa;password=2110;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="OnlineShop" connectionString="data source=DESKTOP-7L1E34G\SQLEXPRESS;initial catalog=MobileWorldPlus;user id=sa;password=2110;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
